=========================================================================
CHANGE LOG
=========================================================================

2009-04-28 Warren L. DeLano <warren@delsci.com>	

	* fixed ramp bug for transformed maps

2009-04-26 Warren L. DeLano <warren@delsci.com>	
	
	* fixed bug with clicking on the sphere representation
	
2009-04-10 Warren L. DeLano <warren@delsci.com>	

	* changed 'import pymol' behavior to defer launch until
          finish_launching is actually called
	
	* added warnings for pml/py/pym run/@ confusion

2009-04-09 Warren L. DeLano <warren@delsci.com>	

	* added bycell selection operator
	
2009-03-26 Warren L. DeLano <warren@delsci.com>	

	* acnt map support
	
	* fixed bug with selection argument to cmd.get_names
	
2009-03-23 Warren L. DeLano <warren@delsci.com>	

	* fixed problem unintentionally quashing "+" from filenames
	
	* fixed selector bug parsing one+object as two + object

	* added " + " selection operator to mitigate impact of bug
	  and added " - " operator to provide complement to " + "
	
2009-03-21 Warren L. DeLano <warren@delsci.com>	

	* added simple fasta output
	
	* fixed major bug with 'domain' argument to select
		
	* greatly improved the performance of the peptide builder

	* fab command
	
2009-03-20 Warren L. DeLano <warren@delsci.com>	

	* very rough FASTA & ALN read support (full peptide builds)
	
2009-03-14 Warren L. DeLano <warren@delsci.com>	

	* updated the vmd molfile plugin code from current UIUC cvs

	* addressing various strict-aliasing issues for GCC
	
2009-03-13 Warren L. DeLano <warren@delsci.com>	

	* field_of_view now interpolated via get_view/set_view matrix
	  (appears to be backwards & forwards compatible)
	
2009-03-11 Warren L. DeLano <warren@delsci.com>	

	* front and back colors, label_color now defaults to front
	
	* fixed object duplication deadlock bug

	* show_frame_rate setting
	
	* valence_mode=1 setting for nicer valence display
	